--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,6 +13,7 @@
   "type": "commonjs",
   "dependencies": {
     "axios": "^1.9.0",
+    "backend": "file:",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
